@startuml

title __VIEW's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    namespace view {
      abstract class pt.ulisboa.tecnico.surespace.ds2os.service.view.ServiceView {
          + ServiceView()
          + equals()
          + hashCode()
          + toString()
          # getAddress()
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    namespace view {
      class pt.ulisboa.tecnico.surespace.ds2os.service.view.TypeSearchServiceView {
          {static} - SPLITTER : String
          + TypeSearchServiceView()
          + searchByType()
          - createRegularNode()
          - filterNodeAddress()
      }
    }
  }
  

  pt.ulisboa.tecnico.surespace.ds2os.service.view.ServiceView o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : service
  pt.ulisboa.tecnico.surespace.ds2os.service.view.TypeSearchServiceView -up-|> pt.ulisboa.tecnico.surespace.ds2os.service.view.ServiceView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
